--- a/index.css
+++ b/index.css
@@ -2,3 +2,8 @@
   text-align: center;
   padding-top: 25%;
 }
+body {
+  background: url(https://images.unsplash.com/photo-1415369629372-26f2fe60c467);
+  background-size: cover;
+  background-positin: center;
+}
