--- a/index.css
+++ b/index.css
@@ -6,4 +6,5 @@ body {
   background: url(https://images.unsplash.com/photo-1415369629372-26f2fe60c467);
   background-size: cover;
   background-positin: center;
+  font-family: Lato;
 }
