changed h1 font size

--- a/index.css
+++ b/index.css
@@ -7,4 +7,9 @@ body {
   background-size: cover;
   background-positin: center;
   font-family: Lato;
+  color: white;
+}
+h1 {
+  font-weight: 700;
+  font-size: 5em;
 }
